<resources>
    <string name="app_name">LearnToCook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="diet">filter by dietary restriction</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="soy_free">Soy Free</string>
    <string name="peanut_free">Peanut Free</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="scale">Scale:</string>
    <string name="scale_ingredients">Scale Ingredients</string>
</resources>