<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.RecipeBookFragment">

    <LinearLayout
        android:id="@+id/layout_buttons_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>

            <androidx.appcompat.widget.SearchView
                android:id="@+id/recipe_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                app:queryHint="search recipes"
                app:defaultQueryHint="search recipes"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"/>

            <ImageButton
                android:id="@+id/btn_diet"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/diet"
                android:layout_margin="8dp"
                android:contentDescription="@string/diet">

            </ImageButton>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/diet_filter_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/diet_chip_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_vegetarian"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/vegetarian"
                    android:contentDescription="@string/vegetarian"
                    android:tag="vegetarian"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_vegan"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/vegan"
                    android:contentDescription="@string/vegan"
                    android:tag="vegan"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_soy"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/soy_free"
                    android:contentDescription="@string/soy_free"
                    android:tag="soy free"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_peanut"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/peanut_free"
                    android:contentDescription="@string/peanut_free"
                    android:tag="peanut free"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_dairy"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/dairy_free"
                    android:contentDescription="@string/dairy_free"
                    android:tag="dairy free"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_gluten"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/gluten_free"
                    android:contentDescription="@string/gluten_free"
                    android:tag="gluten free"/>


            </com.google.android.material.chip.ChipGroup>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipe_book_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"/>
    </LinearLayout>



</LinearLayout>